<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/TVRSDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Rumah sakit ini adalah Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Pulvinar mattis nunc sed blandit libero volutpat.Et molestie ac feugiat sed lectus. Faucibus nisl tincidunt eget nullam"
        android:textColor="@color/Black80"
        android:textAlignment="textStart"
        android:textSize="14dp"
        android:layout_marginStart="17dp"
        android:maxLines="5"
        android:ellipsize="end"
        android:layout_marginEnd="17dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/TVKontak"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:text="@string/kontak"
        app:layout_constraintTop_toBottomOf="@+id/TVRSDesc"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="17dp"
        android:layout_marginTop="24dp"
        android:textSize="18sp"
        android:textColor="@color/Black100"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/TVIGD"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="8dp"
        android:textSize="15sp"
        android:textColor="@color/Black100"
        android:text="@string/igd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/TVKontak"/>

    <TextView
        android:id="@+id/TVKontakIGD"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginEnd="21dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="9dp"
        android:textSize="15sp"
        android:textColor="@color/Black100"
        android:text="63463"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/TVKontak"/>

    <TextView
        android:id="@+id/TVInformasi"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="9dp"
        android:textSize="15sp"
        android:textColor="@color/Black100"
        android:text="@string/informasi"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/TVIGD"/>

    <TextView
        android:id="@+id/TVKontakEmail"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginEnd="21dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="9dp"
        android:textSize="15sp"
        android:textColor="@color/Black100"
        android:text="63463463"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/TVInformasi"/>

    <TextView
        android:id="@+id/TVEmail"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="9dp"
        android:textSize="15sp"
        android:textColor="@color/Black100"
        android:text="@string/Email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/TVInformasi"/>

    <TextView
        android:id="@+id/TVKontakInformasi"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="9dp"
        android:textSize="15sp"
        android:layout_marginEnd="21dp"
        android:textColor="@color/Black100"
        android:text="235235235235235345363463463"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TVIGD"/>

    <View
        android:id="@+id/viewGaris"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/Black10"
        app:layout_constraintTop_toBottomOf="@id/TVEmail"
        android:layout_marginTop="27dp"/>

    <TextView
        android:id="@+id/TVRumahSakitLainnya"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:text="Rumah Sakit Lainnya"
        app:layout_constraintTop_toBottomOf="@+id/viewGaris"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="17dp"
        android:layout_marginTop="16dp"
        android:textSize="18sp"
        android:textColor="@color/Black100"
        android:textStyle="bold"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="wrap_content"
        android:layout_height="251dp"
        android:layout_marginTop="8dp"
        android:paddingLeft="17dp"
        app:layout_constraintTop_toBottomOf="@+id/TVRumahSakitLainnya"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>