<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.Bantuan"
    android:background="#F5F8FA">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/TVToolbarBantuan_activity2"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingRight="17dp"
        android:background="@color/white">
        <TextView
            android:id="@+id/RLBantuan_activity2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineHeight="25dp"
            tools:text="Bantuan"
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="@color/Black100"
            android:textStyle="bold"/>
    </androidx.appcompat.widget.Toolbar>

    <RelativeLayout
        android:id="@+id/RLBantuan"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="17dp"
        android:layout_marginRight="17dp"
        android:background="@drawable/bg_sign_out"
        app:layout_constraintTop_toBottomOf="@id/TVToolbarBantuan_activity2"
        tools:layout_editor_absoluteX="0dp">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="12dp"
            android:contentDescription="@string/bantuan"
            android:src="@drawable/ic_bantuan" />

        <TextView
            android:id="@+id/titleBantuan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="48dp"
            android:layout_marginTop="8dp"
            android:lineHeight="19dp"
            android:text="@string/bantuan"
            android:textColor="@color/Black100"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/descBantuan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="48dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:lineHeight="19dp"
            android:text="@string/tim_medico_siap_membantu_anda_24_7"
            android:textColor="@color/Black100"
            android:textSize="12sp" />

        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="17dp"
            android:src="@drawable/chevron_right_med_e974" />


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/RLAkun"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        app:layout_constraintTop_toBottomOf="@id/RLBantuan"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_profil_akun"
        android:layout_marginLeft="17dp"
        android:layout_marginRight="17dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/frequently_asked_question"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="18dp"
            android:textColor="@color/Black100"
            android:textSize="14sp"
            android:lineHeight="19dp"/>

        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:src="@drawable/chevron_right_med_e974"
            android:layout_alignParentRight="true"
            android:layout_marginRight="17dp"
            android:layout_centerVertical="true"/>
    </RelativeLayout>

    <View
        android:id="@+id/viewGaristTengah"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/Black10"
        app:layout_constraintTop_toBottomOf="@+id/RLAkun"
        android:layout_marginLeft="17dp"
        android:layout_marginRight="17dp"/>


    <RelativeLayout
        android:id="@+id/RLDataPasien"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/viewGaristTengah"
        android:background="@drawable/bg_profil_data_pasien"
        android:layout_marginLeft="17dp"
        android:layout_marginRight="17dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/terms_conditions"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="14dp"
            android:textColor="@color/Black100"
            android:textSize="14sp"
            android:lineHeight="19dp"/>

        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:src="@drawable/chevron_right_med_e974"
            android:layout_alignParentRight="true"
            android:layout_marginRight="17dp"
            android:layout_centerVertical="true"/>


    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>